k8s/overlays/local/deployments-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: demo-prod
spec:
  template:
    spec:
      containers:
        - name: backend-api
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: demo-prod
spec:
  template:
    spec:
      containers:
        - name: worker
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: demo-prod
spec:
  template:
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Never
          securityContext:
            readOnlyRootFilesystem: false
